# backup

./: .gitignore  AGENTS.md  DESIGN.md  README.md  RUN.md  __main__.py  config.example.yaml  go.mod  main.go  main_test.go  pyproject.toml  wsl-backup-cli
.devcontainer/: Containerfile  devcontainer.json
.devcontainer/scripts/: post-create.sh  zsh_history.seed
config/: backup.env.example
config/excludes/: common.exclude  notes-repos.exclude
config/includes/: notes-repos.include
scripts/: __init__.py  backup.py  cli.py  common.py  forget_prune.py  install_restic_wsl_fedora.sh  report.py  restic-version.yaml  restore_smoke.py  update_restic_version.sh
scripts/commands/: __init__.py  backup_command.py  base.py  factory.py  forget_prune_command.py  report_command.py  restore_smoke_command.py
scripts/core/: __init__.py  backup_config.py  clock.py  config_loader.py  file_scanner.py  protocols.py  restic_client.py  size_parser.py
src/: cli.go  config.go  doc.go  execution.go  planner.go  restic_adapter.go  test_runner.go
tests/: conftest.py
tests/integration/: common_integration_test.go  test_backup_flows.py  windows_integration_test.go  wsl_integration_test.go
tests/manual/: build_binaries.sh  run_manifest_integration_pause.sh  run_manual_integration_tests.ps1  run_manual_integration_tests.sh  run_windows_links_integration.sh  run_wsl_integration_pause.sh  run_wsl_links_integration_pause.sh
tests/unit/: adapter_execution_test.go  cli_test.go  config_test.go  planner_test.go  test_backup_command.py  test_cli_parser.py  test_clock.py  test_command_base.py  (+10 more)
(+1 files in other folders)
